# ffmpeg-audio-normalizer.rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  ebu.rs  ebu_r128.rs  ffmpeg.rs  ffprobe.rs  io.rs  main.rs
src/algorithm/: dialogue.rs  ebu_r128.rs  io.rs  mod.rs  peak.rs  rms.rs
src/tool/: ffmpeg.rs  ffprobe.rs  mod.rs
test/: 10_seconds.ac3  10_seconds.debug.ac3
