[package]
name = "ffmpeg-audio-normalizer"
authors = ["Aleksandr Sokolovskii <amsokol+github@gmail.com>"]
version = "1.0.3"
repository = "https://github.com/amsokol/ffmpeg-audio-normalizer.rs"
description = "Command line tool for normalizing audio files."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive", "suggestions", "color", "cargo"] }
anyhow = { version = "1" }
props-rs = { version = "0" }
regex = { version = "1" }
lazy_static = { version = "1" }
indicatif = { version = "0" }

[[bin]]
name = "ffmpeg-audio-normalizer"
path = "src/main.rs"

[profile.release-ex]
inherits = "release"
strip = true
lto = true
codegen-units = 1
panic = "abort"
