[package]
name = "ffmpeg-audio-normalizer"
authors = ["Aleksandr Sokolovskii <amsokol+github@gmail.com>"]
version = "1.0.3"
repository = "https://github.com/amsokol/ffmpeg-audio-normalizer.rs"
description = "Command line tool for normalizing audio files."
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = [
    "derive",
    "suggestions",
    "color",
    "cargo",
] }
anyhow = { version = "1.0" }
props-rs = { version = "0.1" }
regex = { version = "1.5" }
lazy_static = { version = "1.4" }
indicatif = { version = "0.16" }

[[bin]]
name = "ffmpeg-audio-normalizer"
path = "src/main.rs"

[profile.release-ex]
inherits = "release"
strip = true
lto = true
codegen-units = 1
panic = "abort"
